Fix drawer content overflow

--- a/src/shared/ui/drawer/Drawer.module.scss
+++ b/src/shared/ui/drawer/Drawer.module.scss
@@ -2,7 +2,7 @@
   @apply fixed left-0 top-0 z-drawer h-screen w-screen bg-black bg-opacity-25;
 }
 .drawer {
-  @apply fixed left-32 top-0 z-drawer flex h-screen w-screen translate-x-full transform items-stretch justify-between rounded-l-xl transition-transform duration-500 ease-in-out;
+  @apply fixed left-32 top-0 z-drawer flex h-screen w-auto translate-x-full transform items-stretch justify-between overflow-scroll rounded-l-xl transition-transform duration-500 ease-in-out;
   &--open {
     @apply translate-x-0;
   }
@@ -11,5 +11,5 @@
   @apply h-full grow overflow-y-scroll bg-white dark:bg-black;
 }
 .drawer__button {
-  @apply dark:border-gray-dark flex h-full cursor-pointer items-center rounded-l-xl border border-gray-light bg-white p-6 shadow-2xl dark:bg-black;
+  @apply flex h-full cursor-pointer items-center rounded-l-xl border border-gray-light bg-white p-6 shadow-2xl dark:border-gray-dark dark:bg-black;
 }
